[gd_scene load_steps=2 format=3 uid="uid://c4d601fbxusfj"]

[ext_resource type="Script" path="res://test_data/event_runner_test.gd" id="1_j45m3"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_j45m3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 256.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Current State:"

[node name="StatusMessage" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Not Running"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Event File:"

[node name="FilePath" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "none"

[node name="Panel" type="Panel" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer/Panel"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpenButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Pick Event File"

[node name="FileDialog" type="FileDialog" parent="Control"]
title = "Open a File"
initial_position = 2
size = Vector2i(400, 500)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres ; Resource Files")

[node name="ErrorBox" type="AcceptDialog" parent="Control"]
title = "Error"
unresizable = true

[connection signal="pressed" from="Control/VBoxContainer/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="file_selected" from="Control/FileDialog" to="." method="_on_file_dialog_file_selected"]
